Now can operate with either TCMP or Classic USB Tappies, detecting which one is connected at runtime

--- a/src/res/styles/defaultStyles.css
+++ b/src/res/styles/defaultStyles.css
@@ -192,3 +192,9 @@ md-sidenav.small-nav {
 .italic {
     font-style: italic;
 }
+
+div#noTappyHolder {
+    cursor: pointer;
+    outline: none;
+    border: 0;
+}
