Added extended uid mirroring and extended tag tech UID mirroring now enabled in write uri/text/multi-record Type 1 polling for read ndef and detect tag on TCMP Type 1 polling for write ndef on TCMP Type 4B polling enabled on TCMP Get firmware/hardware version on TCMP Can now enable full Type 2 enumeration on TCMP

--- a/src/res/partials/platformUploadUtilityItem.html
+++ b/src/res/partials/platformUploadUtilityItem.html
@@ -2,7 +2,7 @@
     <div flex >
         <div  layout-padding  layout="column">
             <div layout="row" layout-padding class="md-light-head">
-                Configure Tags for TapTrack Platform
+                Encode Tags for TapTrack Platform
             </div>
             <div layout-padding class="md-subhead">
                 This operation instruct the Tappy to write the appropriate data
