--- a/src/res/partials/scanType4.html
+++ b/src/res/partials/scanType4.html
@@ -53,7 +53,7 @@
                 <span>
                     &nbsp;
                 </span>
-                <md-button class="md-raised md-primary" ng-click="scanForTags()" >Detect</md-button>
+                <md-button class="md-raised md-primary" ng-click="scanForTags()" >Scan</md-button>
             </div>
         </div>
     </div>
