--- a/src/res/partials/writeText.html
+++ b/src/res/partials/writeText.html
@@ -10,6 +10,8 @@
                 the text contents of this record in a built-in NDEF data
                 viewing application.
             </div>
+            <ng-include ng-show="supportsMirroredWrite" src="'/res/partials/mirroredWrite.html'" />
+            <md-switch ng-show="supportsMirroredWrite" ng-model="mirrorWrite">UID Mirroring</md-switch>
         </div>
     </div>
     <div layout-padding>
