--- a/src/res/partials/writeVcard.html
+++ b/src/res/partials/writeVcard.html
@@ -12,6 +12,7 @@
                 vCards can contain a large amount of data, so you may need to use
                 a high capacity tag such as an NTAG215/216 to store the full record.
             </div>
+            <ng-include ng-show="supportsEmulation" src="'/res/partials/emulationExplanation.html'" />
         </div>
     </div>
     <div>
